[gd_scene load_steps=14 format=3 uid="uid://ni1fngcx4i84"]

[ext_resource type="Script" uid="uid://bmi5utxg0tmk3" path="res://scripts/patrolling_enemy.gd" id="1_t6e82"]
[ext_resource type="Texture2D" uid="uid://1tp82gyq5xjh" path="res://sprites/plant_enemy_dead.png" id="2_8deld"]
[ext_resource type="Texture2D" uid="uid://bcryc4l65o0od" path="res://sprites/plant_enemy_running.png" id="2_dclbj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8deld"]
atlas = ExtResource("2_dclbj")
region = Rect2(0, 0, 25, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt70o"]
atlas = ExtResource("2_dclbj")
region = Rect2(25, 0, 25, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sedi"]
atlas = ExtResource("2_dclbj")
region = Rect2(50, 0, 25, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_bd0qp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8deld")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_8deld")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_bt70o")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_5sedi")
}],
"loop": true,
"name": &"running",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4mi42"]
radius = 5.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_brnop"]
size = Vector2(20, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mhsj3"]
size = Vector2(20, 2)

[sub_resource type="Animation" id="Animation_fyuqs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mhsj3"]
resource_name = "fade"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vvoay"]
_data = {
&"RESET": SubResource("Animation_fyuqs"),
&"fade": SubResource("Animation_mhsj3")
}

[node name="plant_enemy" type="CharacterBody2D" node_paths=PackedStringArray("anim", "animator", "kill_area", "ground_cast_1", "ground_cast_2", "turn_around_cooldown", "queue_free_timer")]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_t6e82")
SPEED = 1000.0
anim = NodePath("AnimatedSprite2D")
animator = NodePath("AnimationPlayer")
kill_area = NodePath("kill_area")
ground_cast_1 = NodePath("ground_cast_1")
ground_cast_2 = NodePath("ground_cast_2")
turn_around_cooldown = NodePath("turn_around_cooldown")
queue_free_timer = NodePath("queue_free_timer")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bd0qp")
animation = &"dead"
autoplay = "running"
offset = Vector2(0, -11.98)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -10)
shape = SubResource("CapsuleShape2D_4mi42")

[node name="kill_area" type="Area2D" parent="." groups=["kill_hitbox"]]
position = Vector2(0, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_area"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_brnop")

[node name="death_collider" type="Area2D" parent="."]
position = Vector2(0, -20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="death_collider"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_mhsj3")

[node name="queue_free_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vvoay")
}

[node name="ground_cast_1" type="RayCast2D" parent="."]
position = Vector2(-6, 0)
target_position = Vector2(0, 19)
collision_mask = 8

[node name="ground_cast_2" type="RayCast2D" parent="."]
position = Vector2(6, 0)
target_position = Vector2(0, 19)
collision_mask = 8

[node name="turn_around_cooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="area_entered" from="death_collider" to="." method="_on_death_collider_area_entered"]
[connection signal="timeout" from="queue_free_timer" to="." method="_on_queue_free_timer_timeout"]
[connection signal="timeout" from="turn_around_cooldown" to="." method="_on_turn_around_cooldown_timeout"]
